syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.mineru.gpc";
option java_outer_classname = "GPCProto";
option objc_class_prefix = "RTG";
option go_package = "utils/proto";

package gpc;

service GPC {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc CallProgram (ProgramCallRequest) returns (ProgramCallReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ProgramCallRequest {
  string id = 1;
  repeated string arg = 2;
}

message ProgramCallReply {
  bool error = 1;
  string message = 2;
}